[package]
name = "infisical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1.25", features = ["full"]}
#tweetnacl = "0.4"
#sodalite = "0.4"
onionsalt = "0.4"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
#chrono = { version = "0.4", features = ["serde"]}
time = { version = "0.3", features = ["serde", "parsing"] }

[dev-dependencies]
dotenv = "0.15" 
