[package]
name = "infisical-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A rust API wrapper for the open source Infisical secret manager"
keywords = ["infisical", "secrets", "passwords"]
repository = "https://github.com/m-macdonald/infisical-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
onionsalt = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "parsing"] }

[dev-dependencies]
dotenvy = "0.15" 
tokio = { version = "1.25", features = ["full"]}
